--- a/app/src/main/res/layout/dotandboxes_layout.xml
+++ b/app/src/main/res/layout/dotandboxes_layout.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     android:clipChildren="false"
     android:clipToPadding="false">
-
 
     <!-- Custom Game View: Centered in parent -->
     <com.fahadmalik5509.playbox.dotandboxes.DotAndBoxesView
@@ -280,6 +280,26 @@
 
     </RelativeLayout>
 
+    <!-- Shop Button RelativeLayout -->
+    <include
+        android:id="@+id/ShopButton"
+        layout="@layout/shop_button_layout"/>
+
+    <!-- Shadow Layout -->
+    <include
+        android:id="@+id/Shadow"
+        layout="@layout/shadow_layout"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/celebrationLAV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:lottie_rawRes="@raw/lottie_celebration_star"
+        app:lottie_asyncUpdates="automatic"
+        app:lottie_cacheComposition="true"
+        app:lottie_loop="true"
+        android:visibility="gone"/>
     <!-- Reset TextView at bottom -->
     <TextView
         android:id="@+id/resetTV"
@@ -295,16 +315,6 @@
         android:textAppearance="@style/default_font"
         android:onClick="handleResetClick"
         android:stateListAnimator="@animator/pulse_animation" />
-
-    <!-- Shop Button RelativeLayout -->
-    <include
-        android:id="@+id/ShopButton"
-        layout="@layout/shop_button_layout"/>
-
-    <!-- Shadow Layout -->
-    <include
-        android:id="@+id/Shadow"
-        layout="@layout/shadow_layout"/>
 
     <RelativeLayout
         android:id="@+id/resetRL"
@@ -804,6 +814,38 @@
 
         </LinearLayout>
 
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/winnerSplashRL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/winnerNameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Fahad"
+            android:textSize="64sp"
+            android:textAppearance="@style/funky_font"
+            android:textColor="@color/charcoal"
+            android:letterSpacing="0.1"/>
+
+        <TextView
+            android:id="@+id/winnerWonTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/winnerNameTV"
+            android:layout_centerHorizontal="true"
+            android:text="Won"
+            android:textSize="48sp"
+            android:textAppearance="@style/funky_font"
+            android:textColor="@color/charcoal"
+            android:letterSpacing="0.1" />
 
     </RelativeLayout>
 
