--- a/app/src/main/res/layout/colorpuzzle_layout.xml
+++ b/app/src/main/res/layout/colorpuzzle_layout.xml
@@ -54,17 +54,16 @@
         android:background="@drawable/circle_background"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_toStartOf="@+id/settingIconIV"
-        android:layout_alignBottom="@+id/settingIconIV"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="30dp"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/difficultyLAV"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_toStartOf="@+id/settingIconIV"
-        android:layout_alignBottom="@+id/settingIconIV"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
         android:scaleX="0.95"
         android:scaleY="1"
         android:paddingBottom="2dp"
