--- a/app/src/main/res/layout/wordle_layout.xml
+++ b/app/src/main/res/layout/wordle_layout.xml
@@ -12,8 +12,9 @@
         android:id="@+id/flameLAV"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
         android:layout_marginTop="-10dp"
+        android:layout_alignStart="@+id/letterBoxGL"
+        android:layout_marginStart="-12dp"
         android:layout_marginEnd="50dp"
         app:lottie_rawRes="@raw/lottie_flame"
         app:lottie_loop="true"
@@ -488,11 +489,11 @@
 
     <!-- Streak TextView -->
     <RelativeLayout
-        android:layout_width="106dp"
-        android:layout_height="32dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="24dp">
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/letterBoxGL"
+        android:layout_marginStart="-32dp"
+        android:layout_marginTop="16dp">
 
         <TextView
             android:id="@+id/currentStreakTV"
