--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -32,7 +32,7 @@
     <!-- App Name TextView -->
     <TextView
         android:id="@+id/playBoxTV"
-        android:layout_width="230dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
@@ -90,16 +90,16 @@
     </LinearLayout>
 
     <!-- Confetti Lottie Animation -->
+
+    <!-- Coin Flip Lottie Animation -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/confettiLAV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:lottie_rawRes="@raw/lottie_confetti"
         app:lottie_asyncUpdates="enabled"
-        app:lottie_cacheComposition="true" />
+        app:lottie_cacheComposition="true"
+        app:lottie_rawRes="@raw/lottie_confetti" />
 
-    <!-- Coin Flip Lottie Animation -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lavCoinFlip"
         android:layout_width="wrap_content"
